<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/pre_title">
            <CheckBoxPreference
                android:title="@string/switch_photo_mode"
                android:defaultValue="false"
                android:summary="@string/switch_no_photo_mode_summary"
                android:key="switch_noPhotoMode"></CheckBoxPreference>
            <Preference
                android:title="@string/auto_night_mode"
                android:summary="@string/auto_night_mode_summary"
                android:key="auto_nightMode"></Preference>
        <Preference
            android:key="text_size"
            android:summary="设置字体大小"
            android:title="字体大小"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/video_setting">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="video_force_landscape"
            android:summary="@string/video_force_landscape_summary"
            android:title="@string/video_force_landscape"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="video_auto_play"
            android:summary="@string/video_auto_play_summary"
            android:title="@string/video_auto_play"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_setting">

        <Preference
            android:defaultValue="0"
            android:key="custom_icon"
            android:summary="@string/choose_icon_summary"
            android:title="@string/choose_icon"/>

        <Preference
            android:key="color"
            android:summary="@string/choose_theme_color_summary"
            android:title="@string/choose_theme_color"/>

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/slideble"
            android:entryValues="@array/slidableValues"
            android:key="slidable"
            android:negativeButtonText="@string/cancel"
            android:summary="@string/slidable_summary"
            android:title="@string/slidable_title"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="nav_bar"
            android:summary="@string/nav_bar_coloration_summary"
            android:title="@string/nav_bar_coloration"/>

        <Preference
            android:key="clearCache"
            android:title="@string/clear_cache"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_settings">

        <Preference
            android:key="version"
            android:title="@string/version"/>

        <Preference
            android:key="changelog"
            android:summary="@string/changelog_url"
            android:title="@string/changelog"/>

        <Preference
            android:key="licenses"
            android:summary="@string/about_libraries_summary"
            android:title="@string/about_libraries_label"/>

        <Preference
            android:key="sourceCode"
            android:summary="@string/source_code_url"
            android:title="@string/source_code"/>

        <Preference
            android:key="copyRight"
            android:summary="@string/copyright_summary"
            android:title="@string/copyright"/>

    </PreferenceCategory>
</PreferenceScreen>