<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/basic_setting">

        <CheckBoxPreference
            android:key="switch_noPhotoMode"
            android:defaultValue="false"
            android:summary="@string/switch_no_photo_mode_summary"
            android:title="@string/switch_photo_mode"/>

        <Preference
            android:key="auto_nightMode"
            android:summary="@string/auto_night_mode_summary"
            android:title="@string/auto_night_mode" />

        <Preference
            android:key="text_size"
            android:summary="设置字体大小"
            android:title="字体大小" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/video_setting">

        <CheckBoxPreference
            android:key="video_force_landscape"
            android:defaultValue="false"
            android:summary="@string/video_force_landscape_summary"
            android:title="video_force_landscape"/>

        <CheckBoxPreference
            android:key="video_auto_play"
            android:defaultValue="false"
            android:summary="@string/video_auto_play_summary"
            android:title="@string/video_auto_play"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_setting">

        <Preference
            android:key="custom_icon"
            android:summary="@string/choose_icon_summary"
            android:title="@string/choose_icon"/>

        <Preference
            android:key="color"
            android:summary="@string/choose_theme_color_summary"
            android:title="@string/choose_theme_color" />

        <ListPreference
            android:key="slidable"
            android:defaultValue="1"
            android:entries="@array/slidAble"
            android:entryValues="@array/slidAbleValue"
            android:negativeButtonText="@string/button_cancel"
            android:summary="@string/slidable_summary"
            android:title="@string/slidable_title"/>

        <CheckBoxPreference
            android:key="nav_bar"
            android:defaultValue="false"
            android:summary="@string/nav_bar_coloration_summary"
            android:title="@string/nav_bar_coloration"/>

        <Preference
            android:key="clearCache"
            android:title="@string/clear_cache"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_settings">

        <Preference
            android:key="version"
            android:title="@string/version"/>

        <Preference
            android:key="changelog"
            android:title="@string/changelog"/>

        <Preference
            android:key="licenses"
            android:summary="@string/about_libraries_summary"
            android:title="@string/about_libraries_label"/>

        <Preference
            android:key="sourceCode"
            android:title="@string/source_code"/>

        <Preference
            android:key="copyRight"
            android:summary="@string/copyright_summary"
            android:title="@string/copyright"/>

    </PreferenceCategory>

</PreferenceScreen>