<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context=".ComplieActivity">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        app:layout_behavior="@string/fab_transformation_scrim_behavior"
        android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/complie_layout_height"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="@dimen/complie_layout_height"
                   android:gravity="center_vertical"
                   android:textSize="@dimen/Text_Big"
                   android:text="@string/my_cahnnel"/>
               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="2"
                   android:layout_height="@dimen/complie_layout_height"
                   android:gravity="center_vertical"
                   android:textSize="@dimen/Text_middle"
                   android:text="@string/tip_drag"/>
               <Button
                   android:id="@+id/complie_edit"
                   android:layout_width="0dp"
                   android:layout_weight="0.5"
                   android:layout_height="match_parent"
                   android:background="@drawable/compliereques"
                   android:layout_marginTop="@dimen/TextView_Margin"
                   android:textSize="@dimen/Text_middle"
                   android:layout_marginBottom="@dimen/TextView_Margin"
                   android:textColor="@color/themeColor"
                   android:text="@string/edit"/>
           </LinearLayout>

           <com.example.framework.view.TouTiaoRecycleView
               android:id="@+id/Rv_edit"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="@dimen/complie_layout_height"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="@dimen/complie_layout_height"
                   android:gravity="center_vertical"
                   android:textSize="@dimen/Text_Big"
                   android:text="@string/other_channel"/>
           </LinearLayout>
           <com.example.framework.view.TouTiaoRecycleView
               android:id="@+id/Rv_other"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>
       </LinearLayout>
    </ScrollView>
</LinearLayout>